<resources>
    <string name="app_name">Reg_w</string>
    <string name="this_is_an_image">This is an image</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_access_your_account">sign in to access your account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="remember_me">Remember me</string>
    <string name="next">Next</string>
    <string name="new_member">New Member?</string>
    <string name="register_now">Register now</string>
    <string name="forget_password_1">Forget password ?</string>
    <string name="by_creating_a_free_account">by creating a free account.</string>
    <string name="log_in">Log In</string>
    <string name="already_a_member">Already a member?</string>
    <string name="valid_email">Valid Email</string>
    <string name="phone_number">Phone number</string>
    <string name="strong_password">Strong password</string>
    <string name="by_checking_the_box_you_agree_to_our">By checking the box you agree to our</string>
    <string name="terms">Terms</string>
    <string name="and">and</string>
    <string name="conditions">Conditions.</string>
    <string name="next_with_vector"><![CDATA[Next >]]></string>
    <string name="get_started">Get Started</string>
    <string name="full_name">Full name</string>
    <string name="by_checking_the_box_you_agree_to_our_terms_and_conditions">By checking the box you agree to our Terms and Conditions.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>