<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="321dp"
        android:layout_height="251dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/image_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GetStartedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="159dp"
        android:gravity="center"
        android:text="@string/get_started"
        android:textColor="#252525"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CreateAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:gravity="center"
        android:text="@string/by_creating_a_free_account"
        android:textColor="#252525"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GetStartedText" />

    <EditText
        android:id="@+id/editFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_background"
        android:drawableEnd="@drawable/user"
        android:drawablePadding="8dp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccountText" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_background"
        android:drawableEnd="@drawable/mail"
        android:drawablePadding="8dp"
        android:hint="@string/valid_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFullName" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_background"
        android:drawableEnd="@drawable/smartphone"
        android:drawablePadding="8dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="16dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_background"
        android:drawableEnd="@drawable/lock"
        android:drawablePadding="8dp"
        android:hint="@string/strong_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />

    <CheckBox
        android:id="@+id/checkbox_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/by_checking_the_box_you_agree_to_our"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/termsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/terms"
        android:textColor="#6C63FF"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/checkbox_remember_me"
        app:layout_constraintTop_toTopOf="@+id/checkbox_remember_me" />

    <TextView
        android:id="@+id/andText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:gravity="center"
        android:text="@string/and"
        android:textColor="#252525"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/termsText"
        app:layout_constraintTop_toTopOf="@+id/termsText" />

    <TextView
        android:id="@+id/conditionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:gravity="center"
        android:text="@string/conditions"
        android:textColor="#6C63FF"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/andText"
        app:layout_constraintTop_toTopOf="@+id/andText" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="97dp"
        android:background="@drawable/rounded_nxt_button"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/next_with_vector"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/newMemberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:text="@string/already_a_member"
        android:textColor="#252525"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="#6C63FF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/newMemberText"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

</android.support.constraint.ConstraintLayout>